# ParticleZoo

./: .gitattributes  .gitignore  .gitmodules  Doxyfile  LICENSE  PHSPCombine.cc  PHSPConvert.cc  PHSPImage.cc  PHSPSplit.cc  README.md  build.bat  configure  makefile
.github/workflows/: c-cpp.yml
docs/scripts/: custom_doxygen.sty  footer.tex  gen_python_api.py  gendocs.sh  header.tex
examples/geant4/: G4PHSPSourceAction.cc  G4PHSPSourceAction.hh  ParticleZooPrimaryGeneratorAction.cc  ParticleZooPrimaryGeneratorAction.hh
examples/python/: read_phase_space.py  write_phase_space.py
include/particlezoo/: ByteBuffer.h  MTPhaseSpaceReader.h  PDGParticleCodes.h  Particle.h  PhaseSpaceFileReader.h  PhaseSpaceFileWriter.h
include/particlezoo/IAEA/: IAEAHeader.h  IAEAphspFile.h
include/particlezoo/ROOT/: ROOTphsp.h
include/particlezoo/TOPAS/: TOPASHeader.h  TOPASphspFile.h
include/particlezoo/egs/: EGSLATCH.h  egsphspFile.h
include/particlezoo/geant4/: Geant4Particles.h
python/: README.md  pyproject.toml  setup.cfg  setup.py
python/examples/: read_phase_space.py  write_phase_space.py
python/src/particlezoo/: __init__.py  __init__.pyi
python/src/pybind/: module.cpp
src/: MTPhaseSpaceReader.cc  PhaseSpaceFileReader.cc  PhaseSpaceFileWriter.cc
src/IAEA/: IAEAHeader.cc  IAEAphspFile.cc
src/ROOT/: ROOTphsp.cc
src/egs/: egsphspFile.cc
src/iaea/: IAEAHeader.cc  IAEAphspFile.cc
src/parallel/: HistoryBalancedParallelReader.cc  ParticleBalancedParallelReader.cc
src/peneasy/: penEasyphspFile.cc
src/topas/: TOPASHeader.cc  TOPASphspFile.cc
src/utilities/: argParse.cc  formats.cc
(+13 files in other folders)
