[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "pybind11>=2.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "particlezoo"
version = "0.1.0"
description = "Python bindings for the ParticleZoo C++ library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "ParticleZoo contributors" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/dobrienphd/ParticleZoo"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["particlezoo*"]
