[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "pybind11>=2.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "particlezoo"
version = "1.1.1"
description = "Python bindings for the ParticleZoo C++ library"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "ParticleZoo contributors" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/dobrienphd/ParticleZoo"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["particlezoo*"]
